# BitFun

./: .dockerignore  .gitignore  .release-please-manifest.json  .sync-upstream-state.json  ACKNOWLEDGMENTS.md  AGENTS-CN.md  AGENTS.md  BTW_PERSISTENCE_AND_MEMORY_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  LICENSE  LOGGING.md  PR-BODY.md  README.md  README.zh-CN.md  SECURITY.md  SECURITY_CN.md  THIRD_PARTY_NOTICES.md  agent-runtime-budget-governance-design.md  combine-hooks.ps1  explore-cc-haha.ps1  find-cc-haha.ps1  find-hooks-v2.ps1  package-lock.json  package.json  pnpm-lock.yaml  pr-body-original.md  read-hooks.ps1
src/apps/relay-server/: Caddyfile  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  test_incremental_upload.py
src/apps/relay-server/src/: admin.rs  config.rs  db.rs  lib.rs  main.rs
src/apps/relay-server/src/relay/: device_manager.rs  room.rs
src/apps/relay-server/src/routes/: api.rs  auth.rs  devices.rs  mod.rs  sync.rs  websocket.rs
src/apps/relay-server/static/: index.html
src/apps/relay-server/static/assets/: ChatPage-BFmDVI_t.js  imageCompressor-Cy77l5Xt.js  index-DGveIJkk.css  index-rYAMdehH.js
src/apps/relay-server/static/homepage/: i18n.json  index.html
src/apps/relay-server/tests/: library_compat.rs
src/apps/sdk-host/: Cargo.toml
src/apps/sdk-host/src/: lib.rs  main.rs  runtime.rs  transport.rs
src/apps/sdk-host/tests/: process_initialization.rs  stdio_process.rs  stdio_transport.rs
src/crates/adapters/claude-code-adapter/: AGENTS.md  Cargo.toml
src/crates/adapters/claude-code-adapter/src/: agent_source.rs  command_source.rs  hook_source.rs  lib.rs  mcp_source.rs
src/crates/adapters/claude-code-adapter/tests/: command_source.rs  hook_source.rs  mcp_source.rs  subagent_source.rs
src/crates/adapters/codex-adapter/: AGENTS.md  Cargo.toml
src/crates/adapters/codex-adapter/src/: agent_source.rs  discovery.rs  event_map.rs  hook_source.rs  lib.rs  manifest.rs  mcp_source.rs  source_adapter.rs
src/crates/adapters/codex-adapter/tests/: hook_source.rs  mcp_source.rs  subagent_source.rs
src/crates/adapters/opencode-adapter/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/adapters/opencode-adapter/src/: command_source.rs  fixture_contracts.rs  hook_contributions.rs  hook_source.rs  lib.rs  source_adapter.rs
src/crates/adapters/opencode-adapter/tests/: hook_source.rs  opencode_source_adapter.rs
src/crates/adapters/static-hook-support/: Cargo.toml
src/crates/adapters/static-hook-support/src/: lib.rs
src/crates/adapters/static-hook-support/tests/: parser.rs
src/crates/core/: AGENTS-CN.md  AGENTS.md  Cargo.toml  build.rs
src/crates/core/src/: lib.rs  product_assembly.rs  product_domain_runtime.rs  service_agent_runtime.rs
src/crates/core/src/agentic/: deep_review_policy.rs  harness.rs  init_agents_md.rs  mod.rs  round_preempt.rs  skill_agent_snapshot.rs  system.rs
src/crates/core/src/function_agents/: port_adapters.rs
src/crates/core/src/infrastructure/: mod.rs
src/crates/core/src/live_app/: host_dispatch.rs
src/crates/core/src/miniapp/: exporter.rs  host_dispatch.rs  js_worker_pool.rs  manager.rs  runtime_detect.rs  storage.rs
src/crates/core/src/service/: mod.rs
src/crates/core/src/util/: errors.rs  mod.rs  register_arkts_function.rs
src/crates/core/tests/: product_assembly.rs  remote_mcp_streamable_http.rs  stream_processor_openai.rs
src/crates/core/tests/common/: stream_test_harness.rs
src/crates/execution/tool-call-jsonrepair/: Cargo.toml  README.md
src/crates/execution/tool-call-jsonrepair/src/: chars.rs  lib.rs
src/crates/execution/tool-call-jsonrepair/tests/: number_regression_tests.rs  options_tests.rs  parity_fixture_tests.rs  repair_tests.rs  serde_tests.rs  streaming_tests.rs  writer_tests.rs
src/crates/execution/tool-execution/: AGENTS.md  Cargo.toml
src/crates/execution/tool-execution/src/: computer_use.rs  context.rs  exec_command.rs  lib.rs  pipeline.rs  web_readable.rs
src/crates/interfaces/sdk-host/: Cargo.toml
src/crates/interfaces/sdk-host/src/: host.rs  lib.rs  protocol.rs
src/crates/interfaces/sdk-host/tests/: host_lifecycle.rs  (+1 more)
src/crates/services/page-function-runtime/: Cargo.toml
src/crates/services/terminal/: AGENTS.md  Cargo.toml
src/crates/taiji-abnormal/: Cargo.toml
src/crates/taiji-abnormal/src/: gap_alert.rs  lib.rs  trend_accel.rs  vol_anomaly.rs  vol_regime.rs
src/crates/taiji-bar/: Cargo.toml
src/crates/taiji-cli/: Cargo.toml  README.md
src/crates/taiji-content/: Cargo.toml  README.md
src/crates/taiji-content/src/: annotation.rs  chart_option.rs  composer.rs  lib.rs  live_stream.rs
src/crates/taiji-engine/: Cargo.toml
src/crates/taiji-engine-py/: Cargo.toml  README.md  pyproject.toml
src/crates/taiji-engine-py/src/: lib.rs  obs_builder.rs
src/crates/taiji-engine/src/: config.rs  dag.rs  error.rs  factory.rs  feature_flags.rs  lib.rs
src/crates/taiji-engine/tests/: bar_gen_precision.rs  e2e_full_trading.rs  schema_adapter_test.rs
src/crates/taiji-example/: Cargo.toml
src/crates/taiji-example/src/: lib.rs
src/crates/taiji-executor/: Cargo.toml  README.md
src/crates/taiji-executor/src/: bridge.rs  position.rs  types.rs
src/crates/taiji-growth/: Cargo.toml
src/crates/taiji-growth/src/: lib.rs  publisher_website.rs  report_md_gen.rs  task_dag_exec.rs
src/crates/taiji-growth/templates/: daily_report.tera  email_confirmation.tera  email_daily_report.tera  email_signal_alert.tera
src/crates/taiji-realtime/: Cargo.toml
src/crates/taiji-realtime/src/: channel.rs  datasource.rs  lib.rs
src/crates/taiji-sentiment/: Cargo.toml
src/crates/taiji-sentiment/src/: node.rs  tokenizer.rs
src/crates/taiji-strategy-template/: Cargo.toml
src/crates/taiji-strategy-template/src/: lib.rs
src/crates/taiji/taiji-alert/: Cargo.toml  README.md
src/crates/taiji/taiji-backtest/: Cargo.toml  README.md
src/crates/taiji/taiji-blog-gen/: Cargo.toml  README.md
src/crates/taiji/taiji-content/: Cargo.toml
src/crates/taiji/taiji-engine/: Cargo.toml  README.md
(+3245 files in other folders)
