[workspace]
members = [
    "src/crates/taiji-abnormal",
    "src/crates/taiji-alert",
    "src/crates/taiji-backtest",
    "src/crates/taiji-bar",
    "src/crates/taiji-blog-gen",
    "src/crates/taiji-cli",
    "src/crates/taiji-content",
    "src/crates/taiji-engine",
    "src/crates/taiji-engine-py",
    "src/crates/taiji-example",
    "src/crates/taiji-executor",
    "src/crates/taiji-growth",
    "src/crates/taiji-knowledge-graph",
    "src/crates/taiji-llm",
    "src/crates/taiji-orderflow",
    "src/crates/taiji-pattern",
    "src/crates/taiji-publisher",
    "src/crates/taiji-realtime",
    "src/crates/taiji-sentiment",
    "src/crates/taiji-strategen",
    "src/crates/taiji-strategy-template",
]

resolver = "2"

[workspace.package]
name = "taiji-quant"
version = "0.1.0"
authors = ["Taiji Quant Team"]
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
cron = "0.15.0"
regex = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
dashmap = "6"
crossbeam = "0.8"
parking_lot = "0.12"
statrs = "0.17"
indexmap = "2"
rand = "0.8"

# HTTP client
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "rustls", "json", "stream", "multipart", "query", "form"] }

# Web server / WebSocket
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }

# Template engine
tera = "1.20"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Graph
petgraph = { version = "0.6", features = ["serde-1"] }

# ML
candle-core = "0.7"
ndarray = "0.16"

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module"] }

# Chinese text segmentation
jieba-rs = "0.7"

# Parallel processing
rayon = "1.10"

# CSV
csv = "1"

# File system
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
