[package]
name = "bitfun-sdk-host-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Standalone local Agent SDK Host implementation candidate"
autobins = false

[[bin]]
name = "bitfun-sdk-host"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitfun-agent-runtime = { path = "../../crates/execution/agent-runtime" }
bitfun-core = { path = "../../crates/assembly/core", default-features = false, features = ["product-full"] }
bitfun-sdk-host = { path = "../../crates/interfaces/sdk-host" }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
tempfile = "3"

[lints]
workspace = true
