[package]
name = "taiji-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Taiji standalone CLI — zero BitFun desktop dependency"

[[bin]]
name = "taiji"
path = "src/main.rs"

[dependencies]
taiji-engine = { path = "../taiji-engine" }
taiji-bar = { path = "../taiji-bar" }
taiji-example = { path = "../taiji-example" }
taiji-backtest = { path = "../taiji-backtest" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
