[package]
name = "taiji-content"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Taiji content workshop — video rendering, TTS, and FFmpeg composition"

[lib]
name = "taiji_content"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
image = { workspace = true }

# NOTE: The `cron` feature requires building inside the BitFun workspace.
# When enabled, add: bitfun-core = { path = "../../assembly/core" }
# See https://github.com/GCWing/BitFun

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
