[package]
name = "taiji-sentiment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Market sentiment analysis (MIT)"

[lib]
name = "taiji_sentiment"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
taiji-engine = { path = "../taiji-engine" }
jieba-rs = "0.7"

[lints]
workspace = true
