[package]
name = "bitfun-codex-adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Codex plugin adapter for BitFun — wraps opencode-adapter to support .codex-plugin/plugin.json sources"

[lib]
name = "bitfun_codex_adapter"
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
bitfun-opencode-adapter = { path = "../opencode-adapter" }
bitfun-plugin-runtime-host = { path = "../../execution/plugin-runtime-host" }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
dirs = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
