[package]
name = "bitfun-codex-adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Codex static source adapter for BitFun"

[lib]
name = "bitfun_codex_adapter"
crate-type = ["rlib"]

[dependencies]
bitfun-product-domains = { path = "../../contracts/product-domains", default-features = false, features = ["external-sources"] }
bitfun-static-hook-support = { path = "../static-hook-support" }
dirs = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
