[package]
name = "bitfun-opencode-adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Fixture-only OpenCode source projection contracts for BitFun"

[lib]
name = "bitfun_opencode_adapter"
crate-type = ["rlib"]

[dev-dependencies]
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
