[package]
name = "bitfun-tool-call-jsonrepair"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Tool-call JSON repair profile forked from jsonrepair-rs"
license = "MIT"
publish = false
autobins = false

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
