[package]
name = "tool-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
bitfun-events = { path = "../../contracts/events" }
dashmap = { workspace = true }
globset = { workspace = true }
dunce = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
vte = { workspace = true, features = ["ansi"] }
