[package]
name = "bitfun-sdk-host"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Versioned local SDK Host adapter for the BitFun Agent Runtime"

[lib]
name = "bitfun_sdk_host"

[dependencies]
async-trait = { workspace = true }
bitfun-agent-runtime = { path = "../../execution/agent-runtime" }
bitfun-core-types = { path = "../../contracts/core-types" }
bitfun-events = { path = "../../contracts/events" }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
