[package]
name = "terminal-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A standalone terminal module"

[lib]
name = "terminal_core"
path = "src/lib.rs"

[dependencies]
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

# Logging
log = { workspace = true }
rand = { workspace = true }
chardetng = { workspace = true }
encoding_rs = { workspace = true }
libc = { workspace = true }

# UUID for session IDs
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Concurrent collections
dashmap = { workspace = true }

# Platform directories
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Windows process-tree ownership
win32job = { workspace = true }

# portable-pty: ohos requires 0.9 (nix 0.25 is incompatible); all other
# platforms use 0.8 to avoid the PSEUDOCONSOLE_INHERIT_CURSOR ConPTY bug.
[target.'cfg(not(target_env = "ohos"))'.dependencies]
portable-pty = { workspace = true }

[target.'cfg(target_env = "ohos")'.dependencies]
portable-pty = "0.9"

[lints]
workspace = true

